--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=<>, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1> GIPHY PARTY</h1>
+    <form>
+        <input type="text" name="myText" placeholder="Enter text">
+        <button type="submit">Submit</button>
+      </form>
 </body>
 </html>
