add submit button event listener

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <h1> GIPHY PARTY</h1>
     <form>
         <input type="text" name="myText" placeholder="Enter text">
-        <button type="submit">Submit</button>
+        <button id="submitBtn" type="submit">Submit</button>
       </form>
+
+      <DIV></DIV>
+
+      <script src="script.js"></script>
 </body>
 </html>
