--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <body>
     <h1> GIPHY PARTY</h1>
     <form>
-        <input type="text" name="myText" placeholder="Enter text">
+        <input id ="searchInput"type="text" name="search" placeholder="Enter text">
         <button id="submitBtn" type="submit">Submit</button>
       </form>
 
-      <DIV></DIV>
-
+      <div id = "gifsDiv"></div>
       <script src="script.js"></script>
 </body>
 </html>
